RESOLVED FIXED179064
Fix custom header field setting with reloads and asynchronous navigation action policy decisions
https://bugs.webkit.org/show_bug.cgi?id=179064
Summary Fix custom header field setting with reloads and asynchronous navigation acti...
Alex Christensen
Reported 2017-10-31 11:37:45 PDT
Fix custom header field setting with reloads and asynchronous navigation action policy decisions
Attachments
Patch (10.40 KB, patch)
2017-10-31 11:40 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2017-10-31 11:40:39 PDT
WebKit Commit Bot
Comment 2 2017-10-31 12:21:41 PDT
Comment on attachment 325464 [details] Patch Clearing flags on attachment: 325464 Committed r224237: <https://trac.webkit.org/changeset/224237>
WebKit Commit Bot
Comment 3 2017-10-31 12:21:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-11-15 12:30:08 PST
Note You need to log in before you can comment on or make changes to this bug.