Source/WebKit/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp
@@ -768,7 +768,7 @@ void WebFrameLoaderClient::dispatchDecidePolicyForNewWindowAction(const Navigati
     webPage->send(Messages::WebPageProxy::DecidePolicyForNewWindowAction(m_frame->frameID(), SecurityOriginData::fromFrame(coreFrame), navigationActionData, request, frameName, listenerID, UserData(WebProcess::singleton().transformObjectsToHandles(userData.get()).get())));
 }
 
-void WebFrameLoaderClient::applyToDocumentLoader(const WebsitePolicies& websitePolicies)
+void WebFrameLoaderClient::applyToDocumentLoader(WebsitePolicies&& websitePolicies)
 {
     if (!m_frame)
         return;
@@ -782,6 +782,8 @@ void WebFrameLoaderClient::applyToDocumentLoader(const WebsitePolicies& websiteP
         documentLoader = static_cast<WebDocumentLoader*>(coreFrame->loader().documentLoader());
     if (!documentLoader)
         return;
+
+    documentLoader->setCustomHeaderFields(WTFMove(websitePolicies.customHeaderFields));
 
     // Only setUserContentExtensionsEnabled if it hasn't already been disabled by reloading without content blockers.
     if (documentLoader->userContentExtensionsEnabled())
@@ -889,15 +891,9 @@ void WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction(const Navigat
         return;
     }
 
-    documentLoader->setCustomHeaderFields(WTFMove(websitePolicies.customHeaderFields));
-    
-    // Only setUserContentExtensionsEnabled if it hasn't already been disabled by reloading without content blockers.
-    if (documentLoader->userContentExtensionsEnabled())
-        documentLoader->setUserContentExtensionsEnabled(websitePolicies.contentBlockersEnabled);
-
     // We call this synchronously because WebCore cannot gracefully handle a frame load without a synchronous navigation policy reply.
     if (receivedPolicyAction)
-        m_frame->didReceivePolicyDecision(listenerID, policyAction, newNavigationID, downloadID, websitePolicies);
+        m_frame->didReceivePolicyDecision(listenerID, policyAction, newNavigationID, downloadID, WTFMove(websitePolicies));
 }
 
 void WebFrameLoaderClient::cancelPolicyCheck()
